...
			
			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<android.support.v7.widget.CardView
					android:id="@+id/ingredient_list_item"
					style="@style/ListItemCardView"
					android:focusableInTouchMode="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent">
					
...
						android:text="@string/label_list_item_ingredients"
						android:textAppearance="@style/TextPrimary" />
				
				</android.support.v7.widget.CardView>
				
				<android.support.v7.widget.RecyclerView
					android:id="@+id/recycler_view"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="@dimen/margin_medium"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@id/ingredient_list_item" />
...
