...
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.5" />
			
			<TextView
				android:id="@+id/tv_current_step"
				style="@style/SingleStepStepCounter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="2dp"
				app:layout_constraintBaseline_toBaselineOf="@+id/steps_label"
				app:layout_constraintStart_toEndOf="@+id/steps_label"
...
				app:layout_constraintBaseline_toBaselineOf="@+id/steps_label"
				app:layout_constraintStart_toEndOf="@+id/tv_step_count_separator"
				tools:text="10" />
			
			
			<ImageView
				android:id="@+id/iv_next_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/description_next_step_arrow"
				android:padding="@dimen/margin_normal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
...
